tests/ui/diagnostic_namespace/requires_path.rs
#[diagnostic]
//~^ERROR cannot find attribute `diagnostic` in this scope
pub struct Bar;


fn main() {
}
